# gui-helper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: main.rs  session.rs
src/automation/: mod.rs  mouse.rs  window.rs
src/commands/: click.rs  config.rs  focus.rs  maximize.rs  mod.rs  open.rs  overview.rs  session.rs  unmaximize.rs  window.rs  zoom.rs
src/config/: mod.rs
src/grid/: mod.rs
src/overlay/: mod.rs  renderer.rs  simple.rs  window.rs
src/screenshot/: capture.rs  mod.rs
