[package]
name = "gui-helper"
version = "0.1.0"
edition = "2021"
description = "GUI automation helper with hierarchical grid overlay for AI agents"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
screenshots = "0.7"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
enigo = "0.2"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
